# Gaussian09G16_output_Matlab_parser

./: .gitignore  LICENSE  README.md
G09/: G09_animate_mode.m  G09_batch_read_all.m  G09_charge_mult.m  G09_charges.m  G09_charges_fchk.m  G09_check_gaussian_match.m  G09_convergence.m  G09_dipole_polar.m  G09_draw_mode.m  G09_draw_molecule.m  G09_draw_orbital.m  G09_energy.m  G09_fchk_read.m  G09_gaussian_version.m  G09_get_bond_length.m  G09_list.m  G09_modeViewer.m  G09_nmodes.m  G09_orbital_energies.m  G09_read_all.m  G09_read_lines.m  G09_restart.m  G09_route.m  G09_spectra.m  G09_structure.m  G09_write_report.m  dif.mat  draw_rectangle.m  test_09.m  test_fchk.m  untitled3.m
G16/: G16_Toolbox_Manual.docx  G16_animate_mode.m  G16_batch_read_all.m  G16_charge_mult.m  G16_charges.m  G16_check_gaussian_match.m  G16_convergence.m  G16_dipole_polar.m  G16_draw_mode.m  G16_draw_molecule.m  G16_draw_orbital.m  G16_energy.m  G16_gaussian_version.m  G16_list.m  (+15 more)
G16parser/: README.md  example.py  pyproject.toml
G16parser/src/G16parser/: __init__.py  _common.py  animate_mode.py  batch_read_all.py  charges.py  draw_mode.py  draw_molecule.py  energy.py  gaussian_version.py  mode_viewer.py  nmodes.py  read_all.py  read_input.py  restart.py  spectra.py  toolbox_list.py  write_report.py
G16parser/tests/: conftest.py  test_charges_route.py  test_draw_orbital.py  test_energetics.py  test_read_all_and_reports.py  test_read_input.py  test_response_properties.py  test_structure.py  test_toolbox_list.py  test_vibrational.py
G16parser/tests/fixtures/: README.md  test.out  water.gjf
(+17 files in other folders)
